--- a/python-flask/Dockerfile
+++ b/python-flask/Dockerfile
@@ -28,6 +28,7 @@ ADD /my_application /my_application
 RUN pip install -r /my_application/requirements.txt
 
 # Expose ports
+EXPOSE 8080
 EXPOSE 5000
 
 RUN mkdir /my_application/uploads
